--- a/index.html
+++ b/index.html
@@ -1,1 +1,29 @@
-ola mundo
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    
+    <title>Portifolio</title>
+
+</head>
+
+<body>
+
+    <h1>Bruno Henrique da Silva Balbino</h1>
+  <img src="bruno.jpg" width="400px" alt="foto de um homem">
+
+    <h2>Sobre mim</h2>
+
+    <p>Brasileiro nascido na cidade de <strong> Campos do Jordão - SP </strong> ,Sou estudante de Desenvolvimento Web na <a href="https://www.betrybe.com/" target="blank" >TRYBE. </a>  
+        <br>
+       No meu tempo livre gosto de  jogar futebol, assistir filmes, animes e jogar jogos no computador. </p>
+
+
+
+
+
+
+
+
+</body>
+</html>
