colocando link externo

--- a/index.html
+++ b/index.html
@@ -5,19 +5,42 @@
     
     <title>Portifolio</title>
 
+
+
 </head>
 
 <body>
 
+  <h4> <a href="#Sobre">Sobre mim</a>  | <a href="#qualidades">Minhas qualidades </a> |<a href="#redes">Minhas redes sociais</a>        <a href="#canal">Canal que mais assisto</a> | <a href="#foto">Foto</a> | </h4>
+
     <h1>Bruno Henrique da Silva Balbino</h1>
-  <img src="bruno.jpg" width="400px" alt="foto de um homem">
+  <img id="foto"src="bruno.jpg" width="400px" alt="foto de um homem">
 
-    <h2>Sobre mim</h2>
+    <h2 id="sobre">Sobre mim</h2>
 
-    <p>Brasileiro nascido na cidade de <strong> Campos do Jordão - SP </strong> ,Sou estudante de Desenvolvimento Web na <a href="https://www.betrybe.com/" target="blank" >TRYBE. </a>  
+       <p>Brasileiro nascido na cidade de <strong> Campos do Jordão - SP </strong> ,Sou estudante de Desenvolvimento Web na <a href="https://www.betrybe.com/" target="blank" >TRYBE. </a>  
         <br>
        No meu tempo livre gosto de  jogar futebol, assistir filmes, animes e jogar jogos no computador. </p>
 
+
+       <h2 id="qualidades"> Minhas Qualidades</h2>
+
+       <ul>
+             <li> Colaboraçao</li>
+             <li> Força de vontade </li>
+             <li> trabalho em equipe</li>
+
+
+
+       </ul>
+
+       <h2 id="redes">Minhas redes sociais</h2>
+            <a href="https://github.com/brunohsb10" target="blank">Github</a>  |  <a href="https://www.linkedin.com/in/brunohsbalbino/" target="blank">Linkedin</a>
+
+
+<br><br>
+    <h2 id="canal" >Canal que mais assisto no YouTube.</h2>
+    <a href="https://www.youtube.com/channel/UC4ncvgh5hFr5O83MH7-jRJg" target="blank" > Flow Podcast</a> 
 
 
 
