adicionando cor no background

--- a/index.html
+++ b/index.html
@@ -4,14 +4,24 @@
     <meta charset="UTF-8">
     
     <title>Portifolio</title>
+<style>
+     body{
+       background-color: rgb(29, 102, 185);
+     }
 
+
+
+
+
+
+</style>
 
 
 </head>
 
 <body>
 
-  <h4> <a href="#Sobre">Sobre mim</a>  | <a href="#qualidades">Minhas qualidades </a> |<a href="#redes">Minhas redes sociais</a>        <a href="#canal">Canal que mais assisto</a> | <a href="#foto">Foto</a> | </h4>
+  <h4> <a href="#Sobre">Sobre mim</a>  | <a href="#qualidades">Minhas qualidades </a> | <a href="#redes">Minhas redes sociais</a>    |    <a href="#canal">Canal que mais assisto</a> | <a href="#foto">Foto</a> | </h4>
 
     <h1>Bruno Henrique da Silva Balbino</h1>
   <img id="foto"src="bruno.jpg" width="400px" alt="foto de um homem">
@@ -28,7 +38,7 @@
        <ul>
              <li> Colaboraçao</li>
              <li> Força de vontade </li>
-             <li> trabalho em equipe</li>
+             <li> Trabalho em equipe</li>
 
 
 
