--- a/index.html
+++ b/index.html
@@ -1,62 +1,76 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    
+  <head>
+    <meta charset="UTF-8" />
+
     <title>Portifolio</title>
-<style>
-     body{
-       background-color: rgb(29, 102, 185);
+    <link rel="stylesheet" href="stile.css" />
+    <style>
+      /* body{
+       background-color: rgb(34, 78, 128);
+     }
+
+     h1{
+       color: cadetblue;
+
+     }
+
+     h2{
+       color: cadetblue;
+     }
+     h3{
+      color: cadetblue;
+
      }
 
 
+ */
+    </style>
+  </head>
 
-
-
-
-</style>
-
-
-</head>
-
-<body>
-
-  <h4> <a href="#Sobre">Sobre mim</a>  | <a href="#qualidades">Minhas qualidades </a> | <a href="#redes">Minhas redes sociais</a>    |    <a href="#canal">Canal que mais assisto</a> | <a href="#foto">Foto</a> | </h4>
+  <body>
+    <h4>
+      <a href="#Sobre">Sobre mim</a> |
+      <a href="#qualidades">Minhas qualidades </a> |
+      <a href="#redes">Minhas redes sociais</a> |
+      <a href="#canal">Canal que mais assisto</a> | <a href="#foto">Foto</a> |
+    </h4>
 
     <h1>Bruno Henrique da Silva Balbino</h1>
-  <img id="foto"src="bruno.jpg" width="400px" alt="foto de um homem">
+    <img id="foto" src="bruno.jpg" width="400px" alt="foto de um homem" />
 
     <h2 id="sobre">Sobre mim</h2>
 
-       <p>Brasileiro nascido na cidade de <strong> Campos do Jordão - SP </strong> ,Sou estudante de Desenvolvimento Web na <a href="https://www.betrybe.com/" target="blank" >TRYBE. </a>  
-        <br>
-       No meu tempo livre gosto de  jogar futebol, assistir filmes, animes e jogar jogos no computador. </p>
+    <p>
+      Brasileiro nascido na cidade de
+      <strong> Campos do Jordão - SP </strong> ,Sou estudante de Desenvolvimento
+      Web na <a href="https://www.betrybe.com/" target="blank">TRYBE. </a>
+      <br />
+      No meu tempo livre gosto de jogar futebol, assistir filmes, animes e jogar
+      jogos no computador.
+    </p>
 
+    <h2 id="qualidades">Minhas Qualidades</h2>
 
-       <h2 id="qualidades"> Minhas Qualidades</h2>
+    <ul>
+      <li>Colaboraçao</li>
+      <li>Força de vontade</li>
+      <li>Trabalho em equipe</li>
+    </ul>
 
-       <ul>
-             <li> Colaboraçao</li>
-             <li> Força de vontade </li>
-             <li> Trabalho em equipe</li>
+    <h2 id="redes">Minhas redes sociais</h2>
+    <a href="https://github.com/brunohsb10" target="blank">Github</a> |
+    <a href="https://www.linkedin.com/in/brunohsbalbino/" target="blank"
+      >Linkedin</a
+    >
 
-
-
-       </ul>
-
-       <h2 id="redes">Minhas redes sociais</h2>
-            <a href="https://github.com/brunohsb10" target="blank">Github</a>  |  <a href="https://www.linkedin.com/in/brunohsbalbino/" target="blank">Linkedin</a>
-
-
-<br><br>
-    <h2 id="canal" >Canal que mais assisto no YouTube.</h2>
-    <a href="https://www.youtube.com/channel/UC4ncvgh5hFr5O83MH7-jRJg" target="blank" > Flow Podcast</a> 
-
-
-
-
-
-
-
-</body>
+    <br /><br />
+    <h3 id="canal">Canal que mais assisto no YouTube.</h3>
+    <a
+      href="https://www.youtube.com/channel/UC4ncvgh5hFr5O83MH7-jRJg"
+      target="blank"
+    >
+      Flow Podcast</a
+    >
+  </body>
 </html>
